--- a/index.html
+++ b/index.html
@@ -1,67 +1,39 @@
-<!--
-Copyright (c) 2020 周嘉泰
-This file is licensed under BSD 4-Clause License.
--->
-
 <!DOCTYPE html>
 <html lang="zh-cn">
 <head>
     <meta charset="UTF-8">
-    <title>页面标题</title>
-    <link type="text/css" rel="stylesheet" href="style.css">
+    <title>一些文字</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <table class="inner" border="1" align="center" width="1024">
-        <tr>
-            <td colspan="6">
-                <header>
-                    <h1>标题</h1>
-                </header>
-            </td>
-        </tr>
-        <tr>
-            <td colspan="6">
-                <marquee>一些文字 一些文字 一些文字 一些文字</marquee>
-            </td>
-        </tr>
-        <tr>
-            <td style="background-color: cornsilk;">
-                <nav><a href="#"><b>文字</b></a></nav>
-            </td>
-            <td>
-                <nav><a href="#"><b>文字</b></a></nav>
-            </td>
-            <td>
-                <nav><a href="#"><b>文字</b></a></nav>
-            </td>
-            <td>
-                <nav><a href="#"><b>文字</b></a></nav>
-            </td>
-            <td>
-                <nav><a href="#"><b>文字</b></a></nav>
-            </td>
-            <td>
-                <nav><a href="#"><b>文字</b></a></nav>
-            </td>
-        </tr>
-        <tr>
-            <td colspan="6">
-                <div class="main">
-                    <p>一些文字</p>
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <td colspan="6">
-                <footer>
-                    Copyright &copy; <i>2020</i> <i>周嘉泰</i>
-                    <br>
-                    This product includes software developed by <a href="https://github.com/ZhouJiatai">Zhou Jiatai</a>.
-                    <br>
-                    ZptLight is licensed under <a href="https://choosealicense.com/licenses/bsd-4-clause/">BSD 4-Clause License</a>.
-                </footer>
-            </td>
-        </tr>
-    </table>
+    <div class="inner">
+        <header>
+            <h1>一些文字</h1>
+        </header>
+        <hr>
+        <marquee>
+            一些文字
+        </marquee>
+        <hr>
+    </div>
+    <nav>
+        <a href="#" class="nav now"><b>文字</b></a>
+        <a href="#" class="nav"><b>文字</b></a>
+        <a href="#" class="nav"><b>文字</b></a>
+        <a href="#" class="nav"><b>文字</b></a>
+        <a href="#" class="nav"><b>文字</b></a>
+        <a href="#" class="nav"><b>文字</b></a>
+    </nav>
+    <div class="inner">
+        <p>一些文字</p>
+        <hr>
+        <footer>
+            Copyright &copy; 2020 周嘉泰
+            <br>
+            This product includes software developed by <a href="https://github.com/ZhouJiatai">Zhou Jiatai</a>.
+            <br>
+            ZptLight is licensed under <a href="https://choosealicense.com/licenses/bsd-4-clause/">BSD 4-Clause License</a>.
+        </footer>
+    </div>
 </body>
 </html>
